# Research

./: .gitignore  README.md  asctest.py  asctestpng - Copy.py  asctestpng.py  blankpythontester.xlsx  dragrectangle copy.py  dragrectangle.py  excel_to.csv.py  fluorescence-cli.spec  fluoresence.py  fluoresencegraph.xlsx  profileanalyze.py  profilometry-cli.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tester.py
.github/workflows/: python-ci.yml
Excel/: 7-26-24flu.xlsx  7-30-24prof.xlsx  8-6-2024-prof.xlsx  9-11-2024 Prof.xlsx  MANUALCOMP.xlsx  October2024Flu.xlsx  TESTAUTO.xlsx  blankpythontester.xlsx  demo (1).xlsx  demo (2).xlsx  demo (4).xlsx  newtester (1).xlsx  p1-10x10std.xlsx
Misc/: tester.py  testing.py
Profilometry/: p2.opdx
Profilometry/__pycache__/main program/: asctestpng.py
Profilometry/main program/: asctestpng.py  dragrectangle.py  dragrectangle.py.old  opdx_plotter.py
Profilometry/other files/: asctest.py  dragrectangle copy.py
braunschweig_lab_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fluorescence/: __init__.py  autofluorescence.py  fluorescence.py
fluoresence/: fluoresence.py  manualfluores.py
graphing test/: plotter.py
prof files/old/: 100 uM P2.OPDx  100 uM P3.OPDx  25 uM P1.OPDx  25 uM P3.OPDx  250 uM P1.OPDx  250 uM P2.OPDx  50 uM P1.OPDx  50 uM P2.OPDx  BIG BLOCK.OPDx  SID.OPDx  YQ.OPDx
profilometry/: __init__.py  dragrectangle.py  opdx_plotter.py
profilometry/grapher/: __init__.py  plotter.py
(+4 files in other folders)
